Added filehandling
