# backend/src/controller/user.controller.ts
@@ -1,6 +1,11 @@
 import { Router } from "express";
 import { DI } from "../";
 import { wrap } from "@mikro-orm/core";
+import { uploadProfilePicture } from "../middleware/file.middleware"
+import * as fs from "fs";
+import path from "path";
+
+const uploadPath = path.join(__dirname, process.env.STORAGE_PATH || '../../upload/tmp');
 
 const router = Router({ mergeParams: true });
 
@@ -17,13 +22,21 @@ router.get("/:id", async (req, res) => {
   return res.status(200).send(user);
 });
 
-router.put("/:id", async (req, res) => {
+router.put("/:id", uploadProfilePicture, async (req, res) => {
   try {
     const user = await DI.userRepository.findOne(req.params.id);
     if (!user) {
       return res.status(404).send({ message: "User not found" });
     }
-    wrap(user).assign(req.body);
+
+    wrap(user).assign({...req.body });
+
+    const files = req.files as Express.Multer.File[];
+
+    if(files && files.length === 1 && files[0].filename && files[0].filename !== user.photo){
+      if(user.photo !== null) fs.unlinkSync(path.join(uploadPath, user.photo));
+      wrap(user).assign({ photo: files[0].filename});
+    }
     await DI.userRepository.flush();
     return res.json(user);
   } catch (e: any) {
