# openapispec.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 x-stoplight:
   id: 0jjsr4x5g10cz
 info:
@@ -74,9 +74,21 @@ paths:
         description: The User Object to be updated
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
-              $ref: '#/components/schemas/User'
+              type: object
+              properties:
+                id:
+                  type: string
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                email:
+                  type: string
+                photo:
+                  type: string
+                  format: binary
       responses:
         '200':
           description: Updated
@@ -394,7 +406,7 @@ components:
             type: array
             items:
               type:
-                $ref: '#/components/schemas/CourseFile'
+                $ref: '#/components/schemas/File'
           quizzes:
             type: array
             items:
@@ -422,8 +434,8 @@ components:
           type: array
           items:
             type:
-              $ref: '#/components/schemas/CourseSection'
-            $ref: '#/components/schemas/CourseSection'
+              $ref: '#/components/schemas/Section'
+            $ref: '#/components/schemas/Section'
         quizzes:
           type: array
           items:
